--- a/docs.html
+++ b/docs.html
@@ -4,7 +4,69 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="docs.css" rel="stylesheet" type="text/css" />
     <title>Get Started</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <nav class="nav">
+        <div class="nav-brand-name">Minnal UI</div>
+        <ul class="nav-links">
+          <li class="list">
+            <a href="docs.html" class="link nav-link">Docs</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="content">
+        <aside class="aside">
+          <ul>
+            <!-- <li class="list aside-heading">Components</li> -->
+            <li class="list aside-list">
+              <a class="link" href="avatar.html">Avatar</a>
+            </li>
+            <li class="list aside-list">
+              <a class="link" href="alert.html">Alert</a>
+            </li>
+            <li class="list aside-list">
+              <a class="link" href="badge.html">Badge</a>
+            </li>
+            <li class="list aside-list">
+              <a class="link" href="button.html">Button</a>
+            </li>
+            <li class="list aside-list">
+              <a class="link" href="card.html">Card</a>
+            </li>
+            <li class="list aside-list">
+              <a class="link" href="image.html">Image</a>
+            </li>
+            <li class="list aside-list">
+              <a class="link" href="input.html">Input</a>
+            </li>
+            <li class="list aside-list">
+              <a class="link" href="textutilities.html">Text Utilities</a>
+            </li>
+            <li class="list aside-list">
+              <a class="link" href="lists.html">Lists</a>
+            </li>
+            <li class="list aside-list">
+              <a class="link" href="navigation.html">Navigation</a>
+            </li>
+            <li class="list aside-list">
+              <a class="link" href="modal.html">Modal</a>
+            </li>
+            <li class="list aside-list">
+              <a class="link" href="rating.html">Rating</a>
+            </li>
+            <li class="list aside-list">
+              <a class="link" href="toast.html">Toast</a>
+            </li>
+            <li class="list aside-list">
+              <a class="link" href="simplifiedgrid.html">Simplified Grid</a>
+            </li>
+          </ul>
+        </aside>
+        <article class="article"></article>
+      </div>
+    </div>
+  </body>
 </html>
