--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <h1>Minnal UI</h1>
       <p>Build your web applications lightning fast</p>
-      <a href="docs/docs.html" class="btn-get-started">Get Started</a>
+      <a href="components/avatar.html" class="btn-get-started">Get Started</a>
     </div>
   </body>
 </html>
