style: updated styling of landing page

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <div class="container">
-      <h1>Minnal UI</h1>
-      <p>Build your web applications lightning fast</p>
+      <h1 class="landing-heading">Minnal UI</h1>
+      <p class="landing-text">Build your web applications lightning fast</p>
       <a href="components/avatar.html" class="btn-get-started">Get Started</a>
     </div>
   </body>
